Correct mobile background horizontal alignment

--- a/css/common.css
+++ b/css/common.css
@@ -152,7 +152,7 @@ body {
 @media (max-width: 768px) {
 
     body {
-        background-position: 60% top;
+        background-position: 40% top;
     }
 
 }
